# cluster

./: .gitignore  README.md  readme_sim.md  rospkg_compile.sh
kcf_tracker/: CMakeLists.txt  README.md  package.xml
kcf_tracker/include/kcf_tracker/: transform.h
kcf_tracker/include/lib/: kcftracker.hpp  recttools.hpp
kcf_tracker/launch/: kcf_track.launch
kcf_tracker/msg/: set_track_mission.msg  track_target.msg
kcf_tracker/scripts/: datashow.py
kcf_tracker/src/: kcf_tracker_node.cpp  matchTemplate_test.cpp  transform.cpp
kcf_tracker/src/lib/: kcftracker.cpp
mavcomm/: CMakeLists.txt  Readme_mavcomm.md  common.yaml  package.xml
mavcomm/include/: mavcomm.h
mavcomm/include/mavlink/mavcomm/: mavcomm.h  mavlink.h  mavlink_msg_back_home_pos_ned.h  mavlink_msg_changestate.h  mavlink_msg_console.h  mavlink_msg_console_monitor.h  mavlink_msg_kcf_set_target.h  mavlink_msg_kcf_target_pos.h  mavlink_msg_local_position_ned.h  mavlink_msg_mission_back_info.h  mavlink_msg_mission_info.h  mavlink_msg_mission_info_back.h  mavlink_msg_mission_set.h  mavlink_msg_set_home_pos_ned.h  mavlink_msg_set_local_position_ned.h  testsuite.h  version.h
mavcomm/launch/: mavcomm_gcs.launch  mavcomm_uav.launch  px4_bridge.launch  sim_multi.launch  sim_single.launch  sim_single_mavcomm.launch  transmission_test.launch
mavcomm/src/: mavcomm.cpp  mavcomm_backup.cpp  mavcomm_udp_test.cpp
mavcomm/src/plugins/: px4_bridge.cpp  uart_test.cpp
mavcomm_msgs/: CMakeLists.txt  Readme_msgs.md  package.xml
mavcomm_msgs/include/mavcomm_msgs/: mavlink_convert.h
mavcomm_msgs/msg/: ChangeState.msg  Console.msg  Console_monitor.msg  Heartbeat.msg  State.msg  formation_back_info.msg  get_param.msg  global_pos_int.msg  kcf_set_target.msg  kcf_target_pos.msg  local_pos_enu.msg  mission_info.msg  serial_data.msg
mavcomm_msgs/msg/formation/: formation_back_info.msg  formation_info.msg
mavcomm_msgs/msg/mission/: mission_back_info.msg  mission_exec.msg  mission_info.msg  mission_set.msg
mavconsole/: CMakeLists.txt  Readme_console.md  mavconsole.cpp  package.xml
mavconsole/launch/: console.launch  vrpn_sample.launch
mavconsole/launch/cam/: jetson_csi_cam.launch  rs_camera.launch  usb_cam.launch  web_video_server.launch  yolo_v3tiny.launch
mavconsole/launch/console/: Readme.md  rtsp_op2460.launch  rtsp_usbcam.launch
mavconsole/launch/px4/: mavros_px4.launch  px4_vision_pose.launch
mavconsole/launch/vins/: d435i_config.yaml  right.yaml  rviz_config.rviz  vins_d435i.launch  vins_rviz.launch
mavmission/: CMakeLists.txt  Readme_mission.md  package.xml
mavmission/config/: pid_1storder.yaml
mavmission/data/: test.json
mavmission/doc/: formation.md  task.md
mavmission/include/: com_define.h  formation_part.h  mission.h  task_part.h
mavmission/launch/: group_mission.launch  mission.launch
mavmission/src/: avoidance_part.cpp  com_define.cpp  formation_part.cpp  mission.cpp  mission_node.cpp  task_part.cpp  track_part.cpp
px4_offb/: CMakeLists.txt  Readme_px4ctrl.md  package.xml
px4_offb/launch/: ctrl.launch  ctrl_pid.yaml
px4_offb/launch/mavros/: mavros_nvidia_acm0.launch  mavros_nvidia_ths0.launch  mavros_nvidia_ths2.launch
px4_offb/src/: odom2camerapose.cpp  uav_ctrl.cpp  vision_pose.cpp
